--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,regular,700&display=swap');
 
 * {
     font-family: "Roboto Condensed", sans-serif;
